# python-study-series

./: README.md  flake.nix  requirements.txt
ai/ag2_sk_app/: .gitignore  Makefile  OAI_CONFIG_LIST_sample  README.md  cli.py  pyproject.toml  requirements.txt
ai/ag2_sk_app/plugins/OfficePlugin/: __init__.py  config.json  prompt.yaml
ai/ag_math_solver/: .black  Makefile  README.md  app.py  pyproject.toml
ai/ag_math_solver/agents/: example_creator.py  math_solver.py
ai/ag_math_solver/utils/: agent_helpers.py
ai/autogen_math_solver/: .env.sample  .gitignore  Makefile  README.md  requirements.txt
ai/autogen_math_solver/agents/: search_agent.py
ai/autogen_math_solver/database/: db_manager.py
ai/autogen_math_solver/utils/: openai_config.py  openai_wrapper.py  rate_limiter.py  signal_handler.py
ai/crewai/: .gitignore  Makefile  README.md  app.py  cli.py  data_generator.py  enhanced_app.py  main.py  ppt_generator.py  report_service.py  requirements.txt  web_app.py
ai/crewai/sample_data/: customer_feedback_summary.csv  market_trend_analysis.csv  quarterly_sales_data.csv
ai/crewai/static/js/: scripts.js
ai/crewai/templates/: index.html  status.html
ai/crewai_haskell_project/: Makefile  README.md  requirements.txt
ai/crewai_haskell_project/agents/: analyzer_agent.py  deployer_agent.py  developer_agent.py
ai/crewai_haskell_project/docs/: example_scenarios.md  haskell_best_practices.md  index.md
ai/crewai_haskell_project/tasks/: deployer_tasks.py  designer_tasks.py  developer_tasks.py  tester_tasks.py
ai/crewai_ppt_generator/: Makefile  README.md  data_generator.py  ppt_generator.py  report_service.py  requirements.txt  web_app.py
ai/crewai_ppt_generator/templates/: base.html  error.html
ai/crewai_rust_project/: Makefile  README.md  requirements.txt
ai/crewai_rust_project/agents/: analyzer_agent.py  designer_agent.py  developer_agent.py  tester_agent.py
ai/crewai_rust_project/docs/: index.md  rust_best_practices.md
ai/crewai_rust_project/tasks/: deployer_tasks.py
ai/crewai_rust_project/utils/: crew_config.py  project_manager.py
ai/haskell_web_dev_project/: .gitignore  Makefile  app.py  requirements.txt
ai/haskell_web_dev_project/agents/: analyzer_agent.py  deployer_agent.py  designer_agent.py  developer_agent.py  tester_agent.py
ai/haskell_web_dev_project/docs/: agent_collaboration.md  extending_the_system.md
ai/haskell_web_dev_project/tasks/: analyzer_tasks.py  deployer_tasks.py  designer_tasks.py  developer_tasks.py  tester_tasks.py
ai/haskell_web_dev_project/templates/haskell_web_app/: README.md  app.hs  cabal.project  docker-compose.yml  haskell-web-app.cabal  install_deps.sh
ai/haskell_web_dev_project/templates/haskell_web_app/.github/workflows/: ci.yml
ai/haskell_web_dev_project/utils/: api_helpers.py  crew_config.py  project_manager.py
ai/langchain/demo_langchain-agents/: langchain-aws-duckduckgo.ipynb
ai/langchain/demo_langgraph/: .env.sample  .gitignore  Makefile  cli_main.py  langgraph.ipynb  main.py  pyproject.toml  reports.db  requirements.txt  web_main.py
ai/langchain/demo_langgraph/src/: functional_main.py  imperative_main.py
ai/langchain/langgraph/: langgraph.ipynb  pyproject.toml
ai/langchain/tutorials/: script.py
ai/langchain_search_agents/: .black  Makefile  README.md  pyproject.toml
ai/langchain_tutorials/: README.org  pyproject.toml
ai/langgraph_study_agents/: Makefile  README.md  langgraph.ipynb  pyproject.toml  web_main.py
ai/rust_web_dev_project/: .env.sample  .gitignore  app.py
ai/rust_web_dev_project/agents/: deployer_agent.py
ai/rust_web_dev_project/docs/: agent_collaboration.md  example_scenarios.md  extending_the_system.md  index.md
ai/sk_billing_multi_agent/: .env.sample  Makefile  README.md  chat_app.py  pyproject.toml  requirements.txt
ai/travel-agent/: .env.example  .gitignore  Makefile  Makefile.toml  README.md  pyproject.toml  requirements.txt  setup.cfg
basic/asyncio/: main.py
basic/equations/: equations.py
basic/gen_random_number/: Makefile  README.md
basic/geometry/: main.py
basic/threads/: main.py
fastapi-01-init/: README.md  index.html  pyproject.toml
fastapi_01_init/: README.md  pyproject.toml
fastapi_01_init/docs/: requirements.txt
gen_randdom_number/: cpu.py  ddl.sql
genai/langchain/tutorials/: README.org  chatbot.ipynb  chatbot.py  pyproject.toml
langchain/langchain-agents/: README.md  langchain-aws-duckduckgo.ipynb  pyproject.toml
langchain/langgraph/: README.md  langgraph.ipynb  pyproject.toml
langchain/langgraph/src/: main.py
langchain/tutorials/: chatbot.py  client.py  main.py  pyproject.toml  serve.py
sanic_01_init/: README.md  pyproject.toml
sanic_01_init/sanic_01_init/: server.py
tools/word_corrector/: README.md
tools/word_corrector_v2/korean-document-checker/backend/: .env.example  pyproject.toml
tools/word_corrector_v2/korean-document-checker/backend/app/: main.py
tools/word_corrector_v2/korean-document-checker/backend/app/api/endpoints/: check.py  progress.py  upload.py
tools/word_corrector_v2/korean-document-checker/backend/app/core/: azure_client.py  config.py  exceptions.py
tools/word_corrector_v2/korean-document-checker/backend/app/middleware/: __init__.py  error_handler.py  progress_tracker.py
tools/word_corrector_v2/korean-document-checker/backend/app/models/: __init__.py  request.py  response.py
tools/word_corrector_v2/korean-document-checker/backend/app/services/: __init__.py  checker_service.py  document_processor.py  file_manager.py  file_validator.py
tools/word_corrector_v2/korean-document-checker/frontend/: app.py  pyproject.toml  test_result_display.py
tools/word_corrector_v2/korean-document-checker/frontend/components/: README.md  __init__.py  error_display.py  error_recovery.py  file_upload.py  loading_display.py  realtime_progress.py  result_display.py  sample_data.py
tools/word_corrector_v2/korean-document-checker/frontend/services/: api_client.py
web/fastapi_01_init/: README.md
web/sanic_01_init/: README.md
web/streamlit_01_init/: README.org  hello.py  pyproject.toml  requirements.txt
(+76 files in other folders)
