[tool.poetry]
  authors     = ["mingyuchoo <mingyuchoo@gmail.com>"]
  description = ""
  name        = "sanic-01-init"
  readme      = "README.md"
  version     = "0.1.0"

  [tool.poetry.dependencies]
    python = "^3.9"


[build-system]
  build-backend = "poetry.core.masonry.api"
  requires      = ["poetry-core"]
