[project]
  authors = [{email = "mingyuchoo@gmail.com", name = "mingyuchoo"}]
  dependencies = [
    "duckduckgo-search>=6.3.3",
    "langchain-aws>=0.2.6",
    "langchain-community>=0.3.5",
    "langchain>=0.3.7",
    "langgraph>=0.2.44",
  ]
  description = "Default template for PDM package"
  license = {text = "BSD 3-Clause"}
  name = "langchain-search-agents"
  readme = "README.md"
  requires-python = ">=3.14"
  version = "0.1.0"

[build-system]
  build-backend = "pdm.backend"
  requires      = ["pdm-backend"]


[tool.pdm]
  distribution = true

  [tool.pdm.scripts]
    start = "python src/main.py"
