[project]
name = "langchain-agents"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "mingyuchoo", email = "mingyuchoo@gmail.com"},
]
dependencies = ["langchain>=0.3.7", "langgraph>=0.2.44", "langchain-aws>=0.2.6", "duckduckgo-search>=6.3.3", "langchain-community>=0.3.5"]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.scripts]
start = "python src/main.py"
