[project]
name = "langgraph"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "mingyuchoo", email = "mingyuchoo@gmail.com"},
]
dependencies = ["langgraph>=0.2.44", "langchain-aws>=0.2.6"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
