[project]
  authors = [
    {name = "mingyuchoo", email = "mingyuchoo@gmail.com"},
  ]
  dependencies = [
    "langchain-aws>=0.2.6",
    "langchain-community>=0.3.5",
    "langchain>=0.3.7",
    "langgraph>=0.2.44",
    "tavily-python>=0.5.0",
  ]
  description = "Default template for PDM package"
  license = {text = "MIT"}
  name = "langgraph"
  readme = "README.md"
  requires-python = "==3.12.*"
  version = "0.1.0"


[tool.pdm]
  distribution = false


  [tool.pdm.scripts]
    start = "python src/functional_main.py"
