[project]
name = "korean-document-checker-frontend"
version = "0.1.0"
description = "Korean Document Checker Frontend Web Interface"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.28.0",
    "requests>=2.31.0",
    "pandas>=2.1.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["components", "services"]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 88